--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,20 +1,18 @@
 # -*- mode: Makefile ; mode: font-lock -*-
 
-INCLUDES = -I$(top_srcdir)/include/mox -I$(prefix)/include
-AM_CFLAGS = -DRAMADIR=\"$(pkgdatadir)\"
+AM_CFLAGS =
 
-libmox_h_sources = atom.h colorlib.h database.h map2d.h pdb.h pdblib.h	\
-transform.h util.h vector.h
+libmox_h_sources = atom.h colorlib.h database.h pdb.h	\
+transform.h util.h veclib.h pdblib.h
 
-libmox_c_sources = colorlib.c database.c getword.c		\
-libatom.c lqsort.c map2d.c outil.c pdbutil.c util.c vector.c	\
+libmox_c_sources = colorlib.c database.c getword.c libatom.c lqsort.c	\
+o_util.c pdblib.c pdbutil.c util.c veclib.c
 
-libmox_f_sources = jacobi.f
-
-library_includedir = $(pkgincludedir)
+library_includedir = $(includedir)/mox
 library_include_HEADERS = $(libmox_h_sources)
 
 lib_LTLIBRARIES = libmox.la 
-libmox_la_SOURCES = $(libmox_c_sources) $(libmox_f_sources) $(libmox_h_sources)
+libmox_la_SOURCES = $(libmox_c_sources) $(libmox_h_sources)
+libmox_la_LDFLAGS = -version-info 1:0:0
 
 ####
