Also create makefile in test/

--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,7 @@ AC_CONFIG_FILES([Makefile
 		 libmox.spec
 		 libmox.info
                  src/Makefile
+                 test/Makefile
 		 ])
 
 AC_OUTPUT
