--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AC_INIT(libmox, 2.1, mok@bioxray.au.dk)
 
 AC_CONFIG_SRCDIR([src/libatom.c])
 AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_MACRO_DIR([config])
 #AC_CONFIG_HEADER([config.h])
 
 AM_INIT_AUTOMAKE
