--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,5 +2,13 @@
 ## $Id$
 
 EXTRA_DIST = *.c
+AM_LDFLAGS = ../src/libmox.la
+
+noinst_PROGRAMS = struc tst_color tst_db
+
+struc_SOURCES = struc.c
+tst_color_SOURCES = tst_color.c
+tst_db_SOURCES = tst_db.c
+
 
 ####
