Also build chaincat

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,9 +4,9 @@
 EXTRA_DIST = *.c
 AM_LDFLAGS = ../src/libmox.la
 
-noinst_PROGRAMS = struc tst_color tst_db
+noinst_PROGRAMS = chaincat tst_color tst_db
 
-struc_SOURCES = struc.c
+chaincat_SOURCES = chaincat.c
 tst_color_SOURCES = tst_color.c
 tst_db_SOURCES = tst_db.c
 
