--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,7 @@ AM_CFLAGS =
 EXTRA_DIST = libatom.dox
 
 libmox_h_sources = atom.h colorlib.h database.h pdb.h	\
-transform.h util.h veclib.h pdblib.h
+transform.h util.h veclib.h pdblib.h lqsort.h
 
 libmox_c_sources = colorlib.c database.c getword.c libatom.c lqsort.c	\
 o_util.c pdblib.c pdbutil.c util.c veclib.c
@@ -13,7 +13,7 @@ o_util.c pdblib.c pdbutil.c util.c veclib.c
 library_includedir = $(includedir)/mox
 library_include_HEADERS = $(libmox_h_sources)
 
-lib_LTLIBRARIES = libmox.la 
+lib_LTLIBRARIES = libmox.la
 libmox_la_SOURCES = $(libmox_c_sources) $(libmox_h_sources)
 libmox_la_LDFLAGS = -version-info 1:0:0
 
