--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,17 @@ src/Makefile.in
 test/chaincat
 test/tst_color
 test/tst_db
+
+m4/lt~obsolete.m4
+m4/libtool.m4
+m4/ltversion.m4
+m4/ax_prog_doxygen.m4
+m4/ltsugar.m4
+m4/ltoptions.m4
+
+NEWS
+*.tar.gz
+src/*.o
+test/*.o
+Doxyfile
+doc/
